[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniquery"
version = "0.1.0"
description = "Raw SQL in. Typed Python objects out. The only ORM that just does ORM."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Stefano Menci", email = "stefano.menci@gmail.com" }]
dependencies = ["sqlglot", "python-dotenv"]

[project.optional-dependencies]
postgres = ["psycopg2"]

[project.urls]
Homepage = "https://github.com/stenci/UniQuery"

[tool.setuptools]
packages = ["uniquery"]
